samples/_failures_safe/1761596590_9efa53_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f074f29a.c: In function ‘main’:
./samples/SAFE/__tmp_f074f29a.c:157:61: error: invalid suffix "x" on integer constant
  157 |     uint8_t sample_data2[] = {0x54, 0x65, 0x73, 0x74, 0x20, 0x
      |                                                             ^~
./samples/SAFE/__tmp_f074f29a.c:158: error: expected ‘}’ at end of input
./samples/SAFE/__tmp_f074f29a.c:157:30: note: to match this ‘{’
  157 |     uint8_t sample_data2[] = {0x54, 0x65, 0x73, 0x74, 0x20, 0x
      |                              ^
./samples/SAFE/__tmp_f074f29a.c:157:5: error: expected declaration or statement at end of input
  157 |     uint8_t sample_data2[] = {0x54, 0x65, 0x73, 0x74, 0x20, 0x
      |     ^~~~~~~
